# JupyterQt

./: .gitignore  CLAUDE.md  main.py  requirements.txt
cpp/: CMakeLists.txt
cpp/src/config/: ServerConfig.h
cpp/src/controllers/: AppController.cpp  AppController.h  NotebookController.cpp  NotebookController.h
cpp/src/jupyter/: ExecutionTracker.cpp  ExecutionTracker.h  JupyterMessage.cpp  JupyterMessage.h  KernelClient.cpp  KernelClient.h
cpp/src/models/: CellModel.cpp  CellModel.h  KernelState.cpp  KernelState.h  NotebookModel.cpp  NotebookModel.h
cpp/src/network/: RestClient.cpp  RestClient.h
cpp/src/ui/: CellWidget.h  ConnectionDialog.h  FileBrowser.h  KernelStatusWidget.h  OutputArea.h
cpp/src/ui/renderers/: ErrorRenderer.h  HtmlRenderer.h  ImageRenderer.cpp  ImageRenderer.h  TextRenderer.cpp  TextRenderer.h
jupyterqt/: commands.py  config.py  settings.py
jupyterqt/controllers/: app_controller.py  notebook_controller.py
jupyterqt/jupyter/: execution_tracker.py  kernel_client.py  message.py
jupyterqt/models/: cell_model.py  kernel_state.py  notebook_model.py
jupyterqt/network/: kernel_websocket.py  rest_client.py  rest_workers.py
jupyterqt/ui/: cell_widget.py  connection_dialog.py  editor_pane.py  file_browser.py  icon_registry.py  kernel_status_widget.py  keyboard_shortcuts_dialog.py  main_window.py  notebook_tab.py  output_area.py  settings_dialog.py  workspace_widget.py
jupyterqt/ui/renderers/: error_renderer.py  html_renderer.py  image_renderer.py  text_renderer.py
